--- a/practice/myblog/_layouts/default.html
+++ b/practice/myblog/_layouts/default.html
@@ -5,6 +5,10 @@
 <title>{{ page.title }}</title>
 </head>
 <body>
+<header>
+    <h1>Building a blog from a book</h1>
+    {% include navigation.html %}
+</header>
 <main>
 
     <h1>{{ page.title }}</h1>
