Updated nav to use data file

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,7 @@
 <nav>
     <ul>
-        <li>Home</li>
-        <li>About</li>
+        {% for link in site.data.nav %}
+        <li><a href="{{ link.link }}">{{ link.name }}</a></li>
+        {% endfor %}
     </ul>
 </nav>
